[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/moving_platform.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MovingPlatform_GE.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 14 )

[node name="MovingPlatform_GE" type="Node2D"]
script = ExtResource( 2 )

[node name="Platform" type="KinematicBody2D" parent="." groups=[
"Drop_Thru_Group",
]]
collision_layer = 2
collision_mask = 0
motion/sync_to_physics = true

[node name="Sprite" type="Sprite" parent="Platform"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="Check_Player_Drop" type="Area2D" parent="Platform"]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Check_Player_Drop"]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="MoveTween" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true

[connection signal="body_entered" from="Platform/Check_Player_Drop" to="." method="_on_Check_Player_Drop_body_entered"]
[connection signal="body_exited" from="Platform/Check_Player_Drop" to="." method="_on_Check_Player_Drop2_body_exited"]
